# Agiltron-SelfAlign

./: README.md  pyproject.toml  setup.py
agiltron_selfalign/: __init__.py  module.py
